--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,2 +1,5 @@
-%h1 Pages#home
-%p Find me in app/views/pages/home.html.haml
+%h1= "Sample Application"
+%p
+  = "This is a sample application"
+
+=link_to "Sign Up Now!!","#" ,:class=>'signup_button round'
