HTML5 with integration testing

--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -7,13 +7,54 @@ header
     :padding 1em
     :background #fff
 
+nav
+  :background #fff
+  :padding 0 0 .7em
+  :white-space nowrap
+  ul
+    :margin 0
+    :padding 0
+    li
+      :list-style-type none
+      :display inline
+      :padding 0.2em 0
+
+      a
+        :padding 0 5px
+        :font-weight bold
+        
+
 section
   :margin-top 1em
   :font-size 120%
   :padding   20px
+  :background #fff
   
   h1
     :font-size 200%
     
 a
   :color #09c
+  &:hover
+    :color #069
+  &:visited
+    :color #069
+
+a.signup_button 
+  :margin-left auto
+  :margin-right auto
+  :display block
+  :text-align center
+  :width 190px
+  :color #fff
+  :background #006400
+  :font-size 150%
+  :font-weight bold
+  :padding 20px
+
+.round 
+  :-moz-border-radius    10px
+  :-webkit-border-radius 10px
+  :border-radius         10px
+
+
