--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -14,17 +14,70 @@ header img {
 }
 
 /* line 10, sass/custom.sass */
+nav {
+  background: white;
+  padding: 0 0 0.7em;
+  white-space: nowrap;
+}
+/* line 14, sass/custom.sass */
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+/* line 17, sass/custom.sass */
+nav ul li {
+  list-style-type: none;
+  display: inline;
+  padding: 0.2em 0;
+}
+/* line 22, sass/custom.sass */
+nav ul li a {
+  padding: 0 5px;
+  font-weight: bold;
+}
+
+/* line 27, sass/custom.sass */
 section {
   margin-top: 1em;
   font-size: 120%;
   padding: 20px;
+  background: white;
 }
-/* line 15, sass/custom.sass */
+/* line 33, sass/custom.sass */
 section h1 {
   font-size: 200%;
 }
 
-/* line 18, sass/custom.sass */
+/* line 36, sass/custom.sass */
 a {
   color: #0099cc;
+}
+/* line 38, sass/custom.sass */
+a:hover {
+  color: #006699;
+}
+/* line 40, sass/custom.sass */
+a:visited {
+  color: #006699;
+}
+
+/* line 43, sass/custom.sass */
+a.signup_button {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  width: 190px;
+  color: white;
+  background: #006400;
+  font-size: 150%;
+  font-weight: bold;
+  padding: 20px;
+}
+
+/* line 55, sass/custom.sass */
+.round {
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
 }
