--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -2,4 +2,4 @@
 %p
   = "This is a sample application"
 
-=link_to "Sign Up Now!!","#" ,:class=>'signup_button round'
+=link_to "Sign Up Now!!",signup_path ,:class=>'signup_button round'
