--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,4 +32,5 @@
             %li= link_to "About",   about_path
             %li= link_to "Contact",  contact_path
             %li= link_to "Help",  help_path
-
+      
+      =debug(params) if Rails.env.development?
